# homework

1/: CMakeLists.txt
1/src/: CMakeLists.txt  hello.cpp
2/: CMakeLists.txt
drawTrajectory/: CMakeLists.txt  draw_trajectory.cpp  mse.cpp  xdraw_trajectory.cpp
geometry/: useGeometry.cpp
lec2/: CMakeLists.txt
lec3/: CMakeLists.txt  draw_trajectory.cpp  mse.cpp
lec4 /pic/: CMakeLists.txt  undistort_image.cpp
lec4 /stero/: CMakeLists.txt  disparity.cpp
lec4/gaussian/: CMakeLists.txt  gaussnewton.cpp
lec4/stero/: disparity.cpp
lec5/: CMakeLists.txt  E2Rt.cpp  GN-BA.cpp  ORB.cpp  computeORB.cpp
lec6/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp  xdirect_method.cpp
mse/: CMakeLists.txt
optical/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
t1/: CMakeLists.txt
t1/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
useEigen/: CMakeLists.txt  eigenMatrix.cpp
